package visitors.structural;

public class InheritanceVisitor {

}
