package visitors.structural;

public class PackageStructureVisitor {

}
